Fix wrapper overflow

--- a/resources/assets/scss/components/wrapper.scss
+++ b/resources/assets/scss/components/wrapper.scss
@@ -3,5 +3,9 @@
 
   .content-wrapper {
     min-height: calc(100vh - 57px);
+
+    .content.body {
+      overflow: hidden;
+    }
   }
 }
